scrollbar light mode fix

--- a/src/pages/styles/globals.css
+++ b/src/pages/styles/globals.css
@@ -4,7 +4,7 @@ body {
 
 body::-webkit-scrollbar {
   width: 0.5rem;
-  background: #171923;
+  background: transparent;
 }
 
 body::-webkit-scrollbar-thumb {
